--- a/src/app/appointment1/page.module.css
+++ b/src/app/appointment1/page.module.css
@@ -193,19 +193,55 @@
     gap: 20px;
 }
 
-.donateContent>aside {
+#donateAside {
     display: flex;
-    position: absolute;
-    flex: 1;
-    flex-direction: column;
+    flex-flow: column;
+    gap: 20px;
+    align-items: stretch;
     width: 440;
-    top: 45px;
+}
+
+#donateAsideTop {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+#donateAsideTop>span {
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: -1%;
+    vertical-align: middle;
+    color: #0E2515;
+}
+
+#donateAsideTop>button {
+    font-family: Montserrat;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: -1%;
+    text-align: right;
+    vertical-align: middle;
+    color: #1C4A2A;
+    border: none;
+    background:none;
+}
+
+#donateAside>aside {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     gap: 10px;
 }
 
 #doctorsContent {
     width: 932;
-    flex: 2;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
@@ -220,17 +256,6 @@
     gap: 16px;
 }
 
-.donateContent>span {
-    font-family: Montserrat;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 100%;
-    letter-spacing: -1%;
-    vertical-align: middle;
-    color: #0E2515;
-    top: 3px;
-    position: absolute;
-}
 
 .donateContent>button {
     top: 3px;
