--- a/src/app/components/UI/FilterSection/FilterSection.module.css
+++ b/src/app/components/UI/FilterSection/FilterSection.module.css
@@ -1,4 +1,4 @@
-#FilterSection {
+.FilterSection {
     width: 440;
     height: 304;
     border-width: 1px;
@@ -8,7 +8,7 @@
     position: relative;
 }
 
-#FilterContent {
+.FilterContent {
     position: absolute;
     width: 186;
     top: 24px;
@@ -18,7 +18,7 @@
     flex-flow: column;
 }
 
-#FilterContent>span {
+.FilterContent>span {
     font-family: Montserrat;
     font-weight: 600;
     font-size: 16px;
@@ -27,7 +27,7 @@
     color: #000000;
 }
 
-#ListFrame {
+.ListFrame {
     gap: 16px;
     width: 100%;
     display: flex;
