--- a/src/app/booking/page.module.css
+++ b/src/app/booking/page.module.css
@@ -6,6 +6,7 @@
     justify-content: flex-start;
     gap: 0px;
     align-items: stretch;
+    position: relative;
 }
 
 .section1 {
@@ -14,6 +15,7 @@
     display: flex;
     justify-content: center;
     position: relative;
+    z-index: 1;
 }
 
 .title {
@@ -53,4 +55,11 @@
 .section2 {
     width: 53%;
     background-color: #D9D9D9;
+    overflow: hidden;
+    /* position: relative; */
+}
+
+#bgImgWrapper{
+    position: absolute;
+    left: 276.83;
 }
