--- a/src/app/booking/page.module.css
+++ b/src/app/booking/page.module.css
@@ -57,9 +57,14 @@
     background-color: #D9D9D9;
     overflow: hidden;
     /* position: relative; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: -2;
 }
 
 #bgImgWrapper{
     position: absolute;
     left: 276.83;
+    z-index: -1;
 }
