--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,7 +1,8 @@
-body{
+html,body{
     margin: 0px;
     width: 100vw;
     max-width: 1512;
     display: flex;
     flex-flow: column;
+    overflow-x: hidden;
 }
