--- a/src/app/components/layouts/LandingMain/LandingMain.module.css
+++ b/src/app/components/layouts/LandingMain/LandingMain.module.css
@@ -1,20 +1,20 @@
 .main{
     width:100%;
-    height: 911;
+    min-height: calc(100vh - 80px);
     display: flex;
+    flex-wrap: wrap;
     position:relative;
 }
 
 .section1{
-    width: 712px;
+    flex: 1;
+    min-width: 300px;
     background-color: #1C4A2A;
     position: relative;
-    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* height: calc(100vh - 128px); */
 }
 
 .titleBox{
@@ -48,19 +48,21 @@
 }
 .section2{
     flex: 1;
-    width:800px;
+    min-width: 300px;
+    min-height: 500px;
     background-color: #D9D9D9;
     position: relative;
     overflow: hidden;
-    /* height: calc(100vh - 128px); */
 }
 .heroImg {
-    overflow: hidden;
+    /* overflow: hidden; */
     position: absolute;
-    width: 1319.160888671875;
-    height: 911;
-    top: -0.05px;
-    left: -290px;
+    min-height: 100%;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    /* top: -0.05px;
+    left: -290px; */
 }
 
 .searchField{
@@ -92,6 +94,7 @@
     font-size: 18px;
     color: #1C4A2A;
     font-family: inherit;
+    cursor: pointer;
 }
 
 
