--- a/src/app/components/UI/NavHead/NavHead.module.css
+++ b/src/app/components/UI/NavHead/NavHead.module.css
@@ -1,13 +1,13 @@
 .container{
     display: flex;
     align-items: center;
-    padding: 8px;
-    gap: 8px;
+    padding: 1em;
+    gap: 1em;
 }
 
 .logoFrame{
-    width: 40px;
-    height: 40px;
+    width: 2.5em;
+    height: 2.5em;
     border-radius: 50%;
     background: #1C4A2A;
     display: flex;
@@ -16,18 +16,18 @@
 }
 
 .logo{
-    width: 20px;
-    height: 20px;
+    width: 1.4em;
+    height: 1.4em;
     box-sizing: border-box;
 }
 
 .head{
-    font-size: 28px;
+    font-size: 1.7em;
     line-height: 100%;
-    letter-spacing: -1%;
+    /* letter-spacing: -0.1em; */
     text-align: center;
     vertical-align: middle;
     color:#1C4A2A;
-    height: 34px;
+    height: 1em;
     margin: 0px;
 }
