--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,8 +1,9 @@
 html,body{
     margin: 0;
     width: 100%;
-    max-width: 1512px;
-    min-height: 100dvh;
+    height: 100%;
+    /* max-width: 1512px; */
+    /* min-height: 100dvh; */
     display: flex;
     flex-flow: column;
     overflow: hidden;
