--- a/src/app/components/UI/NavLinks/NavLinks.module.css
+++ b/src/app/components/UI/NavLinks/NavLinks.module.css
@@ -1,22 +1,22 @@
 .container {
     width: 100%;
     display: flex;
-    gap: 40px;
+    gap: 2.5em;
     line-height: 100%;
-    letter-spacing: -1%;
+    /* letter-spacing: -1rem; */
     text-align: center;
     vertical-align: middle;
 }
 
 .defaultLink {
-    font-size: 18px;
+    font-size: 1em;
     color: #8C8C8C;
     text-decoration: none;
     transition: color 0.3s ease-in-out;
 }
 
 .currentPageLink, .defaultLink:hover{
-    font-size: 18px;
+    font-size: 1em;
     color: #1C4A2A;
     font-weight: bold;
     text-decoration: none;
