--- a/src/app/components/layouts/LandingMain/LandingMain.module.css
+++ b/src/app/components/layouts/LandingMain/LandingMain.module.css
@@ -1,6 +1,6 @@
 .main{
     width:100%;
-    min-height: calc(100vh - 80px);
+    min-height: calc(100dvh - 12dvh);
     display: flex;
     flex-wrap: wrap;
     position:relative;
@@ -15,48 +15,50 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 1em;
 }
 
 .titleBox{
+    width: 80%;
+    /* height: 35%; */
     display: flex;
     flex-direction: column; 
     justify-content: space-between;
     align-items: flex-start;
-    gap:16px;
-    letter-spacing: -1%;
+    gap: 0.3em;
+    /* letter-spacing: -1%; */
     vertical-align: middle;
 }
 
-.titleHead p{
-    width: 585px;
-    height: 180px;
-    font-size: 60px;
+.titleHead > p{
+    width: 10em;
+    height: 3em;
+    font-size: 3.5em;
     line-height: 150%;
     color:white;
     margin:0;
 }
 
-.titleContent{
-    width: 498px;
-    height: 96px;
-    font-size: 18px;
+
+.titleContent>p{
+    margin:0;
+    width: 30em;
+    height: 6em;
+    font-size: 1em;
     line-height: 180%;
     color: #FFFFFFB2;
 }
-.titleContent p{
-    margin: 0px;
-}
+
 .section2{
     flex: 1;
     min-width: 300px;
-    min-height: 500px;
     background-color: #D9D9D9;
     position: relative;
     overflow: hidden;
 }
 .heroImg {
-    /* overflow: hidden; */
-    position: absolute;
+    overflow: hidden;
+    /* position: absolute; */
     min-height: 100%;
     width: 100%;
     height: auto;
@@ -66,32 +68,34 @@
 }
 
 .searchField{
-    margin-top: 40px;
-    width:447px;
-    border-radius: 16px;
-    padding: 48px 24px;
-    gap: 40px;
+    /* margin-top: 40px; */
+    width: 80%;
+    border-radius: 1em;
+    padding: 2em 0;
+    gap: 1em;
     color:#FFFFFF00;
-    left: -200px;
+    /* left: -200px; */
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    position: relative;
+    /* position: relative; */
 }
+
 .searchDetails{
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
 }
 .searchField button{
-    padding: 20px 48px;
+    padding: 1em 2.65em;
     gap:16px;
-    border-radius: 10px;
+    border-radius: 0.5em;
     text-align: center;
     vertical-align: middle;
-    letter-spacing: -1%;
+    /* letter-spacing: -1%; */
     line-height: 100%;
-    font-size: 18px;
+    font-size: 1em;
     color: #1C4A2A;
     font-family: inherit;
     cursor: pointer;
