--- a/src/app/components/layouts/Footer/Footer.module.css
+++ b/src/app/components/layouts/Footer/Footer.module.css
@@ -1,19 +1,20 @@
 .footer {
     background: var(--white, #FFFFFF);
+    min-height: 4dvh;
 }
 
 .footSection {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 32 60;
+    padding: 2em 4em;
     border-top: 1px solid var(--border-button, #DEDEDE)
 }
 
 .copyright {
-    font-size: 16px;
+    font-size: 1em;
     line-height: 100%;
-    letter-spacing: -1%;
+    /* letter-spacing: -1%; */
     text-align: center;
     vertical-align: middle;
     color: var(--muted-text, #8C8C8C);
@@ -23,16 +24,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap:24;
+    gap: 1.5em;
 }
 
 .contacts div {
-    width: 24;
-    height: 24;
+    width: 1.5em;
+    height: 1.5em;
     position: relative;
 }
 
-.contacts img{
+.contacts img {
     position: absolute;
     top: 4;
     left: 2;
