appointment page with vwport layout

--- a/src/app/components/layouts/Footer/Footer.module.css
+++ b/src/app/components/layouts/Footer/Footer.module.css
@@ -1,6 +1,8 @@
 .footer {
     background: var(--white, #FFFFFF);
-    min-height: 4dvh;
+    height: 4dvh;
+    min-height: 5em;
+    width: 100%;
 }
 
 .footSection {
