--- a/src/app/appointment/page.module.css
+++ b/src/app/appointment/page.module.css
@@ -1,13 +1,17 @@
 .container {
     width: 100%;
+    min-height: 300px;
+    overflow: hidden;
+    height: calc(100dvh - 16dvh);
 }
 
 .searchField {
     box-sizing: border-box;
     width: 100%;
-    height: 801;
-    gap: 40px;
-    padding: 48px 24px;
+    min-height: 250px;
+    height: inherit;
+    gap: 2.5em;
+    padding: 3em 1.5em;
     border: 1px solid #FFFFFF;
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
