--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,7 +1,8 @@
 html,body{
     margin: 0;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    height: 100dvh;
     /* max-width: 1512px; */
     /* min-height: 100dvh; */
     display: flex;
