--- a/src/app/components/layouts/Navbar/Navbar.module.css
+++ b/src/app/components/layouts/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
-    min-height: 12dvh;
+    height: 12dvh;
     width: 100%;
 }
 
