--- a/src/app/booking/page.module.css
+++ b/src/app/booking/page.module.css
@@ -10,7 +10,7 @@
 }
 
 .section1 {
-    width: 47.08994708994709%;
+    flex: 1;
     background-color: #1C4A2A;
     display: flex;
     justify-content: center;
@@ -53,18 +53,35 @@
 }
 
 .section2 {
-    width: 53%;
+   flex: 1;
     background-color: #D9D9D9;
     overflow: hidden;
-    /* position: relative; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
     z-index: -2;
 }
 
 #bgImgWrapper{
-    position: absolute;
-    left: 276.83;
+    width: 100%;
+    height: 100%;
     z-index: -1;
+}
+
+#bgImgWrapper > img{
+    width: 100%;
+    height: 100%;
+}
+
+.bookBox{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
