--- a/src/app/components/layouts/Footer/Footer.module.css
+++ b/src/app/components/layouts/Footer/Footer.module.css
@@ -1,8 +1,12 @@
 .footer {
     background: var(--white, #FFFFFF);
     /* height: 4dvh; */
-    min-height: 5em;
+    height: 4em;
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .footSection {
