--- a/src/app/components/layouts/Navbar/Navbar.module.css
+++ b/src/app/components/layouts/Navbar/Navbar.module.css
@@ -1,10 +1,15 @@
 .container{
+    z-index: 1;
+    position: sticky;
+    top: 0;
+    left: 0;
     padding: 3vh 5vw;
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
     height: 12dvh;
     width: 100%;
+    background-color: white;
 }
 
 .HeadLink{
