made px to em in apntmnt1 page, inc doctorcard

--- a/src/app/components/UI/FilterSection/FilterSection.module.css
+++ b/src/app/components/UI/FilterSection/FilterSection.module.css
@@ -1,6 +1,6 @@
 .FilterSection {
-    width: 440;
-    height: 304;
+    width: 100%;
+    /* height: 304; */
     border-width: 1px;
     background-color: #FBFBFB;
     border: Mixed solid #E0E8E0;
