--- a/src/app/components/layouts/DoctorCard/DoctorCard.module.css
+++ b/src/app/components/layouts/DoctorCard/DoctorCard.module.css
@@ -1,11 +1,11 @@
 .card {
-    width: 300;
-    height: 500;
+    width: 18.75em;
+    height: 31.25em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 40px 27px;
-    border-radius: 16px;
+    padding: 2.5em 1.65em;
+    border-radius: 1em;
     border: 1px solid var(--border-card, #E0E8E0);
     background-color: #F8FCF9;
     box-sizing: border-box;
@@ -22,38 +22,39 @@
 }
 
 .imageFrame {
-    width: 150;
-    height: 150;
+    width: 9.375em;
+    height: 9.375em;
     border-radius: 99px;
 }
 
 .title {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 64px;
-    position: relative;
+    height: 12em;
+    /* position: relative; */
 }
 
 .name {
-    height: 33px;
-    position: absolute;
-    top: 2px;
+    /* height: 33px; */
+    /* position: absolute; */
+    /* top: 2px; */
     /* left: 16.5; */
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 22px;
+    font-size: 1.3em;
     line-height: 150%;
-    letter-spacing: -1%;
+    /* letter-spacing: -1%; */
     text-align: center;
     vertical-align: middle;
 }
 
 .additional {
-    position: absolute;
+    /* position: absolute;
     height: 42;
-    top: 36px;
+    top: 36px; */
     /* left: 24.5px; */
     display: flex;
     gap: 15px;
@@ -72,18 +73,18 @@
 .addFrame>span {
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1em;
     line-height: 180%;
-    letter-spacing: -1%;
+    /* letter-spacing: -1%; */
     vertical-align: middle;
     color: #8C8C8C;
 }
 
 .review {
-    width: 205;
-    height: 42;
-    gap: 15px;
-    padding: 10px;
+    width: 100%;
+    /* height: 42; */
+    /* gap: 15px; */
+    padding: 0.625em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -99,9 +100,9 @@
 .reviewFrame>span {
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1em;
     line-height: 180%;
-    letter-spacing: -1%;
+    /* letter-spacing: -1%; */
     vertical-align: middle;
     color: #8C8C8C;
 }
@@ -117,25 +118,22 @@
 
 .cardButton {
     gap: 16px;
-    padding: 20px 48px;
-    border-radius: 10px;
+    padding: 1.5em 3em;
+    border-radius: 0.5em;
     border-width: 1px;
     border: 1px solid var(--border-button, #DEDEDE);
     display: flex;
     justify-content: center;
     align-items: center;
     box-sizing: content-box;
-    position: absolute;
-    left: 15px;
-    top: 398;
 }
 
 .buttonText{
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.2em;
     line-height: 100%;
-    letter-spacing: -1%;
+    /* letter-spacing: -1%; */
     vertical-align: middle;
     color: #0E2515;
 }
