--- a/src/app/components/UI/SearchDoctor/SearchDoctor.module.css
+++ b/src/app/components/UI/SearchDoctor/SearchDoctor.module.css
@@ -1,23 +1,25 @@
 .searchDetails {
-    width: 1316;
+    width: 90%;
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: center;
+    align-items: stretch;
 }
 
 .frame1 {
     display: flex;
     gap: 16px;
-    width: 1165;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .frame2 {
     width: inherit;
     display: flex;
     gap: 40px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-left-radius: 0.5em;
+    border-bottom-left-radius: 0.5em;
     border-width: 1px;
-    padding: 24px;
+    padding: 1.5em;
     background-color: #FFFFFF;
     border: 1px solid #374957
 }
@@ -29,8 +31,8 @@
 }
 
 .vectorFrame {
-    width: 20;
-    height: 20;
+    width: 1.25em;
+    height: 1.25em;
 }
 
 .vectorFrame img {
@@ -40,9 +42,9 @@
 }
 
 .frame2 input {
-    font-size: 16px;
+    font-size: 1em;
     line-height: 100%;
-    letter-spacing: -1%;
+    /* letter-spacing: -1%; */
     vertical-align: middle;
     color: #AFAFAF;
     background: none;
@@ -55,9 +57,9 @@
 }
 
 .searchBtn{
-    padding: 24 48;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    padding: 1.8em 3.6em;
+    border-top-right-radius: 0.5em;
+    border-bottom-right-radius: 0.5em;
     background-color: #1C4A2A;
     cursor: pointer;
 }
@@ -65,9 +67,9 @@
 .searchBtn span {
     display: flex;
     gap: 12;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 100%;
-    letter-spacing: -1%;
+    /* letter-spacing: -1%; */
     vertical-align: middle;
     color: #FFFFFF;
 }
