navbar in layout and footer height fix

--- a/src/app/booking/page.module.css
+++ b/src/app/booking/page.module.css
@@ -1,54 +1,55 @@
 #container {
     width: 100%;
-    height: 911px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
     gap: 0px;
     align-items: stretch;
-    position: relative;
-    /* flex-grow: 1; */
+    flex-grow: 1;
+    padding-bottom: 5em;
 }
 
 .section1 {
     flex: 1;
     background-color: #1C4A2A;
     display: flex;
-    justify-content: center;
-    position: relative;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     z-index: 1;
 }
 
 .title {
-    position: absolute;
+    margin-top: 10em;
+    /* position: absolute; */
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     align-items: flex-start;
-    gap: 16px;
+    gap: 1em;
     height: fit-content;
     width: fit-content;
-    top: 126px;
+    /* top: 126px; */
 }
 
 .titleHead {
-    width: 585px;
+    width: 10em;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 60px;
+    font-size: 4em;
     line-height: 150%;
-    letter-spacing: -1%;
+    /* letter-spacing: -1%; */
     vertical-align: middle;
     color: #FFFFFF;
 }
 
 .titleContent {
-    width: 498px;
+    width: 28em;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.15em;
     line-height: 180%;
-    letter-spacing: -1%;
+    /* letter-spacing: -1%; */
     vertical-align: middle;
     color: #FFFFFFB2;
 }
@@ -56,33 +57,25 @@
 .section2 {
    flex: 1;
     background-color: #D9D9D9;
-    overflow: hidden;
-    position: relative;
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    z-index: -2;
-}
-
-#bgImgWrapper{
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
-#bgImgWrapper > img{
-    width: 100%;
-    height: 100%;
-}
-
-.bookBox{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    background-image: url('/bookBG-crop.png');
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
+/* #bgImgWrapper{
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+} */
+
+/* #bgImgWrapper > img{
+    width: 100%;
+    height: 100%;
+} */
+
+/* .bookBox{
+    width: 100%;
+    height: 100%;
+} */
