--- a/src/app/appointment/page.module.css
+++ b/src/app/appointment/page.module.css
@@ -2,7 +2,10 @@
     width: 100%;
     min-height: 300px;
     overflow: hidden;
-    height: calc(100dvh - 16dvh);
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .searchField {
