--- a/src/app/components/layouts/Footer/Footer.module.css
+++ b/src/app/components/layouts/Footer/Footer.module.css
@@ -3,17 +3,20 @@
     /* height: 4dvh; */
     height: 4em;
     width: 100%;
-    position: absolute;
+    /* position: absolute;
     bottom: 0;
-    left: 0;
+    left: 0; */
     z-index: 1;
 }
 
 .footSection {
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 2em 4em;
+    box-sizing: border-box;
     border-top: 1px solid var(--border-button, #DEDEDE)
 }
 
