--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,8 +1,18 @@
 html,body{
-    margin: 0;
-    width: 100%;
-    /* height: 100%; */
-    height: 100dvh;
+    html, body {
+        margin: 0;
+        width: 100%;
+        min-height: 100dvh; 
+        height: auto; 
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        overflow-x: hidden; 
+    }    
+}
+
+#_next{
+    min-height: 100dvh;
     /* max-width: 1512px; */
     /* min-height: 100dvh; */
     display: flex;
