--- a/src/app/booking/page.module.css
+++ b/src/app/booking/page.module.css
@@ -1,15 +1,17 @@
 #container {
     width: 100%;
+    height: auto;
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
     gap: 0px;
     align-items: stretch;
     flex-grow: 1;
-    padding-bottom: 5em;
+    /* padding-bottom: 5em; */
 }
 
 .section1 {
+    height: auto;
     flex: 1;
     background-color: #1C4A2A;
     display: flex;
@@ -20,7 +22,7 @@
 }
 
 .title {
-    margin-top: 10em;
+    margin-top: 3em;
     /* position: absolute; */
     display: flex;
     justify-content: space-between;
@@ -55,13 +57,14 @@
 }
 
 .section2 {
-   flex: 1;
+    flex: 1;
     background-color: #D9D9D9;
     background-image: url('/bookBG-crop.png');
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: auto;
 }
 
 /* #bgImgWrapper{
