--- a/src/app/components/layouts/BookingBox/BookingBox.module.css
+++ b/src/app/components/layouts/BookingBox/BookingBox.module.css
@@ -1,5 +1,5 @@
 .container {
-    height: 75%;
+    height: 85%;
     width: 85%;
     background-color: #FFFFFF;
     display: flex;
@@ -7,15 +7,16 @@
     justify-content: space-evenly;
     align-items: center;
     z-index: 1;
-    padding: 2.3em 1.69em 0.5em;
+    padding: 2em 1.5em 0.5em;
 }
 
 .scheduleAppointment {
+    height: 15%;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
     align-items: stretch;
-    gap: 25;
+    gap: 1em;
 }
 
 .scheduleHead {
