pure sel. in root layout

--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,4 +1,13 @@
-html,body{
+#html{
+    margin: 0px;
+    width: 100vw;
+    max-width: 1512;
+    display: flex;
+    flex-flow: column;
+    overflow-x: hidden;
+}
+
+#body{
     margin: 0px;
     width: 100vw;
     max-width: 1512;
