--- a/src/app/components/layouts/BookingBox/BookingBox.module.css
+++ b/src/app/components/layouts/BookingBox/BookingBox.module.css
@@ -4,59 +4,60 @@
     background-color: #FFFFFF;
     display: flex;
     flex-flow: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     z-index: 1;
     padding: 2em 1.5em 0.5em;
+    gap: 0.5em;
 }
 
 .scheduleAppointment {
-    height: 15%;
+    width: 100%;
+    flex: 1;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
     align-items: stretch;
-    gap: 1em;
 }
 
 .scheduleHead {
     width: 100%;
+    flex: 1;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 127;
 }
 
 .scheduleHead>span {
     font-family: Montserrat;
     font-weight: 400;
-    font-size: 22px;
+    font-size: 1.5em;
     line-height: 100%;
     letter-spacing: 0%;
     color: #221E20;
 }
 
 .scheduleHead>button {
-    padding: 14 36;
+    padding: 1em 2em;
     background-color: #1C4A2A;
     text-align: center;
     vertical-align: middle;
     font-family: Montserrat;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 1em;
     line-height: 100%;
     letter-spacing: 0em;
     color: #FFFFFF;
-    border-radius: 9px;
+    border-radius: 0.5em;
     border: none;
 }
 
 .mode {
+    flex: 1;
     display: flex;
     justify-content: center;
     gap: 0px;
     align-items: center;
-
 }
 
 .videoBtn {
@@ -92,7 +93,7 @@
     border: 1px solid #D3D4DB;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 0.75em;
     line-height: 100%;
     letter-spacing: 0%;
     color: #000000;
@@ -114,7 +115,7 @@
 .month>span {
     font-family: Montserrat;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 0.75em;
     line-height: 100%;
     letter-spacing: 0%;
     color: #313131;
@@ -124,7 +125,7 @@
     width: 100%;
     font-family: Montserrat;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 0.75em;
     line-height: 100%;
     letter-spacing: 0%;
     color: #FFFFFF;
