--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -5,7 +5,8 @@
     display: flex;
     flex-flow: column;
     height: fit-content;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
+    /* overflow-y: auto; */
     justify-content: space-between;
 }
 
@@ -16,7 +17,8 @@
     display: flex;
     flex-flow: column;
     justify-content: space-between;
-    overflow: hidden;
+    /* overflow-x: hidden; */
+    /* overflow-y: auto; */
     height: fit-content;
     min-height: 100dvh;
 }
