--- a/src/app/booking/page.module.css
+++ b/src/app/booking/page.module.css
@@ -59,26 +59,36 @@
 .section2 {
     flex: 1;
     background-color: #D9D9D9;
-    background-image: url('/bookBG-crop.png');
-    display: flex;
-    flex-direction: column;
+    /* background-image: url('/bookBG-crop.png'); */
+    /* display: flex; */
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     height: auto;
+    position: relative;
 }
 
 /* #bgImgWrapper{
     width: 100%;
     height: 100%;
     z-index: -1;
-} */
-
-/* #bgImgWrapper > img{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+*/
+#bgImgWrapper > img{
     width: 100%;
     height: 100%;
-} */
+    z-index: -1;
+}
 
-/* .bookBox{
+
+.bookBox{
+    z-index: 1; /* Ensure BookingBox is above the background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 100%;
-} */
+    height: auto;
+}
