--- a/src/app/components/UI/SlotBox/SlotBox.module.css
+++ b/src/app/components/UI/SlotBox/SlotBox.module.css
@@ -6,6 +6,7 @@
     align-items: stretch;
     width: 100%;
     border-radius: 1em;
+    flex: 1;
 }
 
 .SlotTop {
@@ -27,7 +28,7 @@
 .timeHead>span {
     font-family: Montserrat;
     font-weight: 700;
-    font-size: 17px;
+    font-size: 1em;
     line-height: 100%;
     letter-spacing: 0%;
 }
@@ -39,7 +40,7 @@
     border-radius: 1.5em;
     font-family: Montserrat;
     font-weight: 700;
-    font-size: 12px;
+    font-size: 0.8em;
     line-height: 100%;
     letter-spacing: 0%;
     color: #000000E5;
