--- a/src/app/components/layouts/BookingBox/BookingBox.module.css
+++ b/src/app/components/layouts/BookingBox/BookingBox.module.css
@@ -1,5 +1,5 @@
 .container {
-    height: 85%;
+    /* height: 85%; */
     width: 85%;
     background-color: #FFFFFF;
     display: flex;
@@ -9,6 +9,7 @@
     z-index: 1;
     padding: 2em 1.5em 0.5em;
     gap: 0.5em;
+    margin: 1.5em 0em;
 }
 
 .scheduleAppointment {
@@ -18,6 +19,7 @@
     flex-flow: column;
     justify-content: space-between;
     align-items: stretch;
+    gap: 0.5em;
 }
 
 .scheduleHead {
