--- a/src/app/components/layouts/BookingBox/BookingBox.module.css
+++ b/src/app/components/layouts/BookingBox/BookingBox.module.css
@@ -61,34 +61,60 @@
     gap: 0px;
     align-items: center;
 }
-
-.videoBtn {
-    flex: 1;
-    font-family: Montserrat;
-    font-weight: 500;
-    font-size: 13px;
-    line-height: 100%;
-    letter-spacing: 0%;
-    color: #FFFFFFE5;
-    background-color: #1C4A2A;
-    border: none;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
-    padding: 1em 2em;
+.mode > button{
+    cursor: pointer;
 }
-
-.visitBtn {
+.videoBtn {
     padding: 1em 2em;
     flex: 1;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 13px;
+    font-size: 0.75em;
     line-height: 100%;
     letter-spacing: 0%;
     background-color: #FFFFFF;
+    border-top-left-radius: 0.5em;
+    border-bottom-left-radius: 0.5em;
     border: 1px solid #F4D7D0;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
+}
+.activeVideoBtn {
+    padding: 1em 2em;
+    flex: 1;
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 0.75em;
+    line-height: 100%;
+    letter-spacing: 0%;
+    border-top-left-radius: 0.5em;
+    border-bottom-left-radius: 0.5em;
+    background-color: #1C4A2A !important;
+    color: white !important;
+    border: 1px solid #1C4A2A !important;
+}
+.visitBtn{
+    padding: 1em 2em;
+    flex: 1;
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 0.75em;
+    line-height: 100%;
+    letter-spacing: 0%;
+    background-color: #FFFFFF;
+    border-top-right-radius: 0.5em;
+    border-bottom-right-radius: 0.5em;
+    border: 1px solid #F4D7D0;
+}
+.activeVisitBtn {
+    padding: 1em 2em;
+    flex: 1;
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 0.75em;
+    line-height: 100%;
+    letter-spacing: 0%;
+    background-color: #1C4A2A !important;
+    color: white !important;
+    border: 1px solid #1C4A2A !important;
 }
 
 .locationDrop {
@@ -104,8 +130,25 @@
 }
 
 .locationDrop>select {
+    cursor: pointer;
     width: 100%;
     border: none;
+    outline: none;
+}
+
+.locationDrop::after {
+    content: "▼"; /* Unicode for down arrow */
+    font-size: 0.8rem;
+    position: absolute;
+    right: 10px;
+    pointer-events: none; /* Prevents arrow from interfering with clicks */
+}
+
+/* Style options */
+.locationDrop select option {
+    background-color: white;
+    color: black;
+    font-size: 1rem;
 }
 
 .month {
