--- a/src/app/components/layouts/DoctorCard/DoctorCard.module.css
+++ b/src/app/components/layouts/DoctorCard/DoctorCard.module.css
@@ -35,6 +35,7 @@
     width: 100%;
     height: 12em;
     /* position: relative; */
+
 }
 
 .name {
@@ -49,6 +50,8 @@
     /* letter-spacing: -1%; */
     text-align: center;
     vertical-align: middle;
+    white-space: nowrap;
+    word-break: keep-all;
 }
 
 .additional {
@@ -75,6 +78,8 @@
     font-weight: 500;
     font-size: 1em;
     line-height: 180%;
+    word-break:keep-all;
+    white-space: nowrap;
     /* letter-spacing: -1%; */
     vertical-align: middle;
     color: #8C8C8C;
