pagination & filtering setup

--- a/src/app/components/UI/PagesFrame/PagesFrame.module.css
+++ b/src/app/components/UI/PagesFrame/PagesFrame.module.css
@@ -1,3 +1,4 @@
+
 .container {
     display: flex;
     justify-content: space-between;
@@ -21,5 +22,46 @@
     background: none;
 }
 
+
 /* .pageButton>span {
 } */
+
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
+    border-radius: 6px;
+    padding: 0.5em;
+}
+
+.pageArrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
+    border-radius: 6px;
+    padding: 0.75em;
+}
+
+.pageArrow div {
+    width: 16;
+    height: 16;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pageArrow img {
+    color: #8C8C8C;
+}
+
+.pageArrow span {
+    font-family: Montserrat;
+    font-weight: 400;
+    font-size: 1em;
+    line-height: 100%;
+    letter-spacing: 0%;
+    color: #8C8C8C;
+}
