--- a/src/app/appointment1/page.module.css
+++ b/src/app/appointment1/page.module.css
@@ -172,8 +172,8 @@
     flex:2;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
-    align-content: space-between;
+    justify-content: space-evenly;
+    align-content: center;
     gap: 2.5em 0.5em;
 }
 
