--- a/src/app/appointment1/[id]/booking/page.module.css
+++ b/src/app/appointment1/[id]/booking/page.module.css
@@ -19,6 +19,7 @@
     justify-content: flex-start;
     align-items: center;
     z-index: 1;
+    max-width: 50%;
 }
 
 .title {
@@ -66,6 +67,7 @@
     align-items: center;
     height: auto;
     position: relative;
+    max-width: 50%;
 }
 
 /* #bgImgWrapper{
