--- a/src/app/components/UI/InputField/InputField.module.css
+++ b/src/app/components/UI/InputField/InputField.module.css
@@ -46,3 +46,13 @@
 .input:focus {
     outline: none;
 }
+
+.input[data-autocompleted] {
+    background-color: transparent !important;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+    transition: background-color 0s 0s, color 0s 0s;
+    transition-delay: calc(infinity * 1s);
+}
