--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,168 +1,104 @@
-.page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
-}
-
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-  }
-}
-
-.main {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
-}
-
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
-}
-
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
-}
-
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
-.ctas {
-  display: flex;
-  gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
-}
-
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
-}
-
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 180px;
-}
-
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.footer img {
-  flex-shrink: 0;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
-
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
-  .main ol {
-    text-align: center;
-  }
-
-  .ctas {
-    flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
+.main{
+    width:100%;
+    min-height: calc(100dvh - 12dvh);
+    display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
+    position:relative;
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+.section1{
+    flex: 1;
+    min-width: 300px;
+    background-color: #1C4A2A;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
 }
+
+.titleBox{
+    width: 80%;
+    /* height: 35%; */
+    display: flex;
+    flex-direction: column; 
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 0.3em;
+    /* letter-spacing: -1%; */
+    vertical-align: middle;
+}
+
+.titleHead > p{
+    width: 10em;
+    height: 3em;
+    font-size: 3.5em;
+    line-height: 150%;
+    color:white;
+    margin:0;
+}
+
+
+.titleContent>p{
+    margin:0;
+    width: 30em;
+    height: 6em;
+    font-size: 1em;
+    line-height: 180%;
+    color: #FFFFFFB2;
+}
+
+.section2{
+    flex: 1;
+    min-width: 300px;
+    background-color: #D9D9D9;
+    position: relative;
+    overflow: hidden;
+}
+.heroImg {
+    overflow: hidden;
+    /* position: absolute; */
+    min-height: 100%;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    /* top: -0.05px;
+    left: -290px; */
+}
+
+.searchField{
+    /* margin-top: 40px; */
+    width: 80%;
+    border-radius: 1em;
+    padding: 2em 0;
+    gap: 1em;
+    color:#FFFFFF00;
+    /* left: -200px; */
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    /* position: relative; */
+}
+
+.searchDetails{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.searchField button{
+    padding: 1em 2.65em;
+    gap:16px;
+    border-radius: 0.5em;
+    text-align: center;
+    vertical-align: middle;
+    /* letter-spacing: -1%; */
+    line-height: 100%;
+    font-size: 1em;
+    color: #1C4A2A;
+    font-family: inherit;
+    cursor: pointer;
+}
+
+
