--- a/src/app/components/UI/NavButtons/NavButtons.module.css
+++ b/src/app/components/UI/NavButtons/NavButtons.module.css
@@ -59,3 +59,13 @@
         padding: 0.75em 1.5em;
     }
 }
+
+@media screen and (max-width:768px){
+    .container{
+        flex-direction: column;
+        background-color: #8c8c8c91;
+        border-bottom-left-radius: 0.75em;
+        border-bottom-right-radius: 0.75em;
+        width: 100%;
+    }
+}
