--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,6 +9,7 @@
 
 .section1{
     flex: 1;
+    width: 50%;
     min-width: 300px;
     background-color: #1C4A2A;
     position: relative;
@@ -26,14 +27,14 @@
     flex-direction: column; 
     justify-content: space-between;
     align-items: flex-start;
-    gap: 0.3em;
+    /* gap: 0.3em; */
     /* letter-spacing: -1%; */
     vertical-align: middle;
 }
 
 .titleHead > p{
-    width: 10em;
-    height: 3em;
+    /* width: 10em;
+    height: 3em; */
     font-size: 3.5em;
     line-height: 150%;
     color:white;
@@ -43,8 +44,8 @@
 
 .titleContent>p{
     margin:0;
-    width: 30em;
-    height: 6em;
+    /* width: 30em;
+    height: 6em; */
     font-size: 1em;
     line-height: 180%;
     color: #FFFFFFB2;
@@ -52,6 +53,7 @@
 
 .section2{
     flex: 1;
+    width: 50%;
     min-width: 300px;
     background-color: #D9D9D9;
     position: relative;
@@ -73,7 +75,7 @@
     width: 80%;
     border-radius: 1em;
     padding: 2em 0;
-    gap: 1em;
+    /* gap: 1em; */
     color:#FFFFFF00;
     /* left: -200px; */
     display: flex;
@@ -103,3 +105,8 @@
 }
 
 
+@media screen and (max-width: 600px){
+    .section2{
+        display: none;
+    }
+}
