--- a/src/app/appointment1/page.module.css
+++ b/src/app/appointment1/page.module.css
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
-    min-height: 300px;
+    /* min-height: 300px; */
 }
 
 .searchField {
@@ -155,7 +155,7 @@
     vertical-align: middle;
     color: #1C4A2A;
     border: none;
-    background:none;
+    background: none;
     padding: 0;
 }
 
@@ -169,7 +169,7 @@
 }
 
 #doctorsContent {
-    flex:2;
+    flex: 2;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
@@ -193,3 +193,68 @@
     border: none;
     background-color: red;
 } */
+
+@media(max-width:1450px) {
+    #doctorsContent {
+        flex: 3;
+    }
+}
+
+@media(max-width:1320px) {
+    #doctorsContent {
+        flex: 4;
+    }
+}
+
+@media(max-width:1260px) {
+    #doctorsContent {
+        flex: 5;
+    }
+
+    #donateContent {
+        gap: 1em;
+    }
+}
+
+@media(max-width:1220px) {
+    #doctorsContent {
+        flex: 2;
+    }
+}
+
+@media(max-width:1010px) {
+    #doctorsContent {
+        flex: 3;
+    }
+}
+
+@media(max-width:925px) {
+    .donateContent {
+        flex-direction: column;
+        align-items: stretch;
+        justify-content: flex-start;
+        gap: 0.5em;
+    }
+
+    #donateAside {
+        flex: 1;
+        display: flex;
+        flex-flow: column;
+        gap: 1em;
+        align-items: stretch;
+        position: relative;
+    }
+
+    #donateAside>aside {
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+
+    .donateSection{
+        padding: 5em 0.5em 1.5em;
+    }
+    #doctorsContent {
+        flex: 1;
+    }
+}
