--- a/src/app/components/UI/SlotDisabled/SlotDisable.module.css
+++ b/src/app/components/UI/SlotDisabled/SlotDisable.module.css
@@ -12,5 +12,19 @@
     font-size: 14px;
     line-height: 100%;
     letter-spacing: 0%;
+    white-space: nowrap;
+    text-align: center;
 }
 
+@media screen and (max-width: 550px){
+    .slotBtn{
+        font-size:0.75em;
+    }
+}
+
+@media screen and (max-width: 450px){
+    .slotBtn{
+       width:30%;
+       /* font-size: 1em; */
+    }
+}
