--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-flow: column;
     justify-content: space-between;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     /* overflow-y: auto; */
     height: fit-content;
     min-height: 100dvh;
