--- a/src/app/appointment1/[id]/booking/page.module.css
+++ b/src/app/appointment1/[id]/booking/page.module.css
@@ -19,7 +19,6 @@
     justify-content: flex-start;
     align-items: center;
     z-index: 1;
-    max-width: 50%;
 }
 
 .title {
@@ -68,9 +67,12 @@
     align-items: center;
     height: auto;
     position: relative;
-    max-width: 50%;
 }
-
+.backgroundImage{
+    position: absolute;
+    left: 0;
+    top: 0;
+}
 /* #bgImgWrapper{
     width: 100%;
     height: 100%;
@@ -94,4 +96,10 @@
     align-items: center;
     width: 100%;
     height: auto;
+}
+
+@media(max-width: 768px){
+    .section1{
+        display: none;
+    }
 }
