--- a/src/app/components/UI/SlotAvailable/SlotAvailable.module.css
+++ b/src/app/components/UI/SlotAvailable/SlotAvailable.module.css
@@ -9,12 +9,26 @@
     text-align: center;
     font-family: Montserrat;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 1em;
     line-height: 100%;
     letter-spacing: 0%;
+    white-space: nowrap;
 }
 
 button.slotBtn:hover {
     background-color: #1C4A2A !important;
     color: #FFFFFF !important;
+}
+
+@media screen and (max-width: 550px){
+    .slotBtn{
+        font-size:0.75em;
+    }
+}
+
+@media screen and (max-width: 450px){
+    .slotBtn{
+       width:30%;
+       /* font-size: 1em; */
+    }
 }
