--- a/src/app/components/UI/NavLinks/NavLinks.module.css
+++ b/src/app/components/UI/NavLinks/NavLinks.module.css
@@ -12,7 +12,8 @@
     font-size: 1em;
     color: #8C8C8C;
     text-decoration: none;
-    transition: color 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    opacity: 1;
 }
 
 .currentPageLink, .defaultLink:hover{
@@ -20,6 +21,7 @@
     color: #1C4A2A;
     font-weight: bold;
     text-decoration: none;
+    opacity: 1;
 }
 
 @media screen and (max-width: 1200px) {
@@ -30,23 +32,36 @@
 
 @media screen and (max-width: 950px) {
     .container {
-        gap: 1.5vw;
-    }
-    .defaultLink, .currentPageLink {
-        font-size: 0.95em;
+        gap: 2vw;
     }
 }
 
-@media screen and (max-width:820px){
-    .container{
-        gap: 0.75vw;
+@media screen and (max-width: 890px) {
+    .container {
+        gap: 0;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 500px) {
     .container {
         flex-direction: column;
-        gap: 1.5em;
-        /* background-color: #8C8C8C; */
+        align-items: center;
+        gap: 2em;
+        width: 100%;
+        padding: 2em 0;
+    }
+
+    .defaultLink, .currentPageLink {
+        font-size: 1.1em;
+        width: 100%;
+        text-align: center;
+        padding: 0.5em 0;
+        color: white;
+        opacity: 1;
+    }
+
+    .defaultLink:hover, .currentPageLink {
+        color: #ffffff;
+        font-weight: 600;
     }
 }
