--- a/src/app/components/UI/NavHead/NavHead.module.css
+++ b/src/app/components/UI/NavHead/NavHead.module.css
@@ -43,3 +43,19 @@
         gap: 1vw;
     }
 }
+@media screen and (max-width: 768px){ 
+    .head{
+        display: none;
+    }
+}
+
+@media(max-width:500px){
+    .container{
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+    .head{
+        display: block;
+    }
+}
