--- a/src/app/components/UI/InputField/InputField.module.css
+++ b/src/app/components/UI/InputField/InputField.module.css
@@ -9,7 +9,7 @@
 }
 
 .innerFrame {
-    padding: 20 24;
+    padding: 1em 1.15em;
     display: flex;
     gap: 206;
     background-color: #F5F5F5;
@@ -55,4 +55,14 @@ input:-webkit-autofill,
 input:-webkit-autofill:focus {
     transition: background-color 0s 0s, color 0s 0s;
     transition-delay: calc(infinity * 1s);
+}
+
+@media(max-width:320px) {
+    .innerFrame {
+        padding: 0.75em 0.5em;
+    }
+
+    .mainFrame {
+        gap: 0;
+    }
 }
