--- a/src/app/components/UI/SearchDBTN/SearchDBTN.module.css
+++ b/src/app/components/UI/SearchDBTN/SearchDBTN.module.css
@@ -1,9 +1,9 @@
 .button {
     width: 100%;
-    border-radius: 10px;
-    padding: 20px 48px;
+    border-radius: 0.5em;
+    padding: 1em 1.5em;
     color: #ffffff;
-    font-size: 16px;
+    font-size: 1em;
     line-height: 100%;
     letter-spacing: -1%;
     text-align: center;
