--- a/src/app/sign-up/page.module.css
+++ b/src/app/sign-up/page.module.css
@@ -17,8 +17,8 @@
 
 .searchField {
     box-sizing: border-box;
-    width: 35em;
-    /* height: 804; */
+    width: 70%;
+    height: 80%;
     padding: 1.5em;
     display: flex;
     flex-flow: column nowrap;
@@ -91,4 +91,23 @@
     color: #1C4A2A;
     font-weight: bold;
     margin-bottom: 15px;
+}
+
+@media screen and (max-width:530px){
+    .searchField{
+        width:80%;
+        padding: 1.5em 1em;
+    }
+}
+@media screen and (max-width:425px){
+    .searchField{
+        width:90%;
+        padding: 1.25em 0.75em;
+    }
+}
+@media screen and (max-width:375px){
+    .searchField{
+        width:95%;
+        padding: 1em 0.5em;
+    }
 }
